[package]
name = "serial_frame"
version = "0.1.0"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = "Sends byte chunks over a channel, split using given delimiter"
license = "MIT"
repository = "https://github.com/TotalKrill/serial_frame"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = {version = "3.3.0", default-features = false}
log = "0.4"

[dev-dependencies]
simple_logger = "1.3"
